Add delete and complete project